--- a/scss/components/_projects.scss
+++ b/scss/components/_projects.scss
@@ -31,7 +31,7 @@
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   -o-transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @include box-shadow;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
     -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -56,9 +56,10 @@
 
 .projects-content {
   padding: 20px 24px;
-  border-left: 1px solid var(--border-color);
-  border-right: 1px solid var(--border-color);
-  border-bottom: 1px solid var(--border-color);
+
+  border-left: 1px solid $border-color;
+  border-right: 1px solid $border-color;
+  border-bottom: 1px solid $border-color;
 }
 
 .projects-overflow {
@@ -73,12 +74,12 @@
 .projects-description {
   font-family: 'Roboto';
   font-style: normal;
-  font-weight: normal;
-  cursor: pointer;
-  font-size: 18px;
-  line-height: 1.56;
+  @include fontz(18px, 1.56, 400);
   letter-spacing: 0.03em;
-  color: var(--second-title-color);
+  cursor: pointer;
+
+  color: $second-title-color;
+
   background: rgba(33, 150, 243, 0.9);
   position: absolute;
   width: 100%;
@@ -93,7 +94,7 @@
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   -o-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @include transform;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
