--- a/scss/layout/_activities.scss
+++ b/scss/layout/_activities.scss
@@ -1,3 +1,5 @@
+//-----чем мы занимаемся-----//
+
 .section-activities {
   padding-bottom: 94px;
 }
@@ -15,25 +17,23 @@
 }
 
 .activities-title {
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 1.17;
+  @include fontz(36px, 1.17, 700);
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--primary-title-color);
   margin-bottom: 50px;
+
+  color: $primary-title-color;
 }
 
 .activities-text {
   font-family: Roboto;
   font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
+  @include fontz(14px, 1.14, 700);
   text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--second-title-color);
+
+  color: $second-title-color;
   background: rgba(47, 48, 58, 0.8);
 
   display: flex;
