--- a/scss/layout/_clients.scss
+++ b/scss/layout/_clients.scss
@@ -1,13 +1,14 @@
+//-----наши клиенты-----//
+
 .clients-title {
   font-family: inherit;
   font-style: normal;
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 1.17;
+  @include fontz(36px, 1.17, 700);
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--primary-title-color);
   margin-bottom: 50px;
+
+  color: $primary-title-color;
 }
 
 .clients-list {
@@ -17,10 +18,10 @@
 
 .client-item {
   justify-content: center;
-}
 
-.client-item:not(:last-child) {
-  margin-right: 30px;
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .client-link {
@@ -31,19 +32,21 @@
   justify-content: center;
   border: 1px solid currentColor;
   border-radius: 4px;
+
   color: #afb1b8;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.client-link:hover,
-.client-link:focus,
-.client-link.current {
-  border-color: var(--accent-color);
-}
+  @include border;
 
-.client-link:hover .client-icon,
-.client-link:focus .client-icon {
-  fill: var(--accent-color);
+  &:hover,
+  &:focus,
+  &.current {
+    border-color: $accent-color;
+  }
+
+  &:hover .client-icon,
+  &:focus .client-icon {
+    fill: $accent-color;
+  }
 }
 
 .client-icon {
@@ -53,5 +56,5 @@
   border-radius: 4px;
   justify-content: center;
   align-items: center;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @include fill;
 }
