--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,7 +1,8 @@
 .header {
   display: flex;
   align-items: center;
-  border: 1px solid var(--line-color);
+
+  border: 1px solid $line-color;
 }
 
 .header-container {
@@ -9,29 +10,131 @@
   align-items: center;
 }
 
+//-----логотип-----//
+
+.header-logo {
+  color: $accent-color;
+  font-family: 'Raleway', sans-serif;
+  @include fontz(26px, 1.19, 700);
+
+  letter-spacing: 0.03em;
+  margin-right: 93px;
+
+  &.link {
+    display: block;
+    padding-top: 24px;
+    padding-bottom: 25px;
+    width: 145px;
+  }
+}
+
+.header-logo .studio-dark {
+  color: #000;
+
+  font-family: 'Raleway', sans-serif;
+  font-size: 26px;
+}
+
+//-----навигация-----//
+
 .header-nav {
   display: flex;
   align-items: center;
 }
 
-.header-logo {
-  color: var(--accent-color);
-  font-family: 'Raleway', sans-serif;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  margin-right: 93px;
-}
-
-.header-logo.link {
+.menu-list {
   display: block;
-  padding-top: 24px;
-  padding-bottom: 25px;
-  width: 145px;
+  @include fontz(14px, 1.14, 500);
+  letter-spacing: 0.02em;
+
+  color: $primary-title-color;
+  @include color;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
+  &:hover,
+  &:focus,
+  &.current,
+  .header-contacts:hover,
+  .header-contacts:focus {
+    color: $accent-color;
+  }
 }
 
-.studio-dark {
-  color: #000;
-  font-family: 'Raleway', sans-serif;
-  font-size: 26px;
+.menu-item {
+  position: relative;
+  display: inline-flex;
+}
+
+.menu-link {
+  display: flex;
+}
+
+.menu-link .menu-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.menu-item .current::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 4px;
+  bottom: -2px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2px;
+  background-color: $accent-color;
+  position: absolute;
+}
+
+//-------контакты--------//
+
+.header-contacts {
+  display: inline-flex;
+  margin-left: auto;
+
+  color: $primary-text-color;
+
+  @include fontz(14px, 1.14, 500);
+  letter-spacing: 0.02em;
+  @include color;
+}
+
+.header-email,
+.header-tel {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  align-items: center;
+}
+
+.email-icon {
+  width: 16px;
+  height: 12px;
+}
+
+.tel-icon {
+  width: 10px;
+  height: 16px;
+}
+
+.tel-icon,
+.email-icon {
+  align-items: center;
+  fill: $primary-text-color;
+}
+
+.header-contacts:focus .tel-icon,
+.header-contacts:hover .tel-icon,
+.header-contacts:hover .email-icon,
+.header-contacts:focus .email-icon {
+  fill: $accent-color;
+}
+
+.header-contacts .menu-item + .menu-item {
+  margin-left: 50px;
+}
+
+.menu-item .email-icon,
+.menu-item .tel-icon {
+  margin-right: 10px;
 }
