--- a/scss/layout/_modal.scss
+++ b/scss/layout/_modal.scss
@@ -1,9 +1,13 @@
+//-----модальное окно-----//
+
 .backdrop {
   width: 100vw;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.2);
   position: fixed;
   top: 0;
+
+  background: rgba(0, 0, 0, 0.2);
+
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -14,19 +18,20 @@
   width: 528px;
   height: 581px;
   padding: 40px;
-  background-color: var(--second-title-color);
+
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+
+  background-color: $second-title-color;
 }
 
 .modal-btn {
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
-  background: var(--second-title-color);
   width: 30px;
   height: 30px;
   border-radius: 50%;
@@ -36,18 +41,21 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #000000;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.modal-btn:hover,
-.modal-btn:focus {
-  color: var(--accent-color);
+  color: #000000;
+  background: $second-title-color;
+  @include color;
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
 }
 
 .modal-icon {
   width: 18px;
   height: 18px;
+
   fill: currentColor;
 }
 
@@ -65,24 +73,23 @@
 .modal-form-head {
   font-family: 'Roboto';
   font-style: normal;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
+  @include fontz(20px, 1.15, 700);
   letter-spacing: 0.03em;
   margin-bottom: 12px;
-  color: var(--primary-title-color);
+
+  color: $primary-title-color;
 }
 
 .modal-form-item {
   font-family: Roboto;
   font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
+  @include fontz(12px, 1.17, 400);
   letter-spacing: 0.01em;
   margin-bottom: 10px;
-  color: var(--primary-text-color);
+
+  color: $primary-text-color;
 }
+
 .modal-form-wrapper {
   display: block;
   position: relative;
@@ -92,22 +99,23 @@
 .modal-form-input {
   font-family: Roboto;
   font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 1.17;
+  @include fontz(12px, 1.17, 400);
   width: 100%;
   height: 40px;
   padding-left: 42px;
   cursor: pointer;
+
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.modal-form-input:hover,
-.modal-form-input:focus {
-  outline: none;
-  border-color: var(--accent-color);
+  @include border-color;
+
+  &:hover,
+  &:focus {
+    outline: none;
+
+    border-color: $accent-color;
+  }
 }
 
 .modal-form-icon {
@@ -118,12 +126,13 @@
   top: 50%;
   transform: translateY(-50%);
   left: 12px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.modal-form-input:hover + .modal-form-icon,
-.modal-form-input:focus + .modal-form-icon {
-  fill: var(--accent-color);
+  @include fill;
+
+  .modal-form-input:hover + &,
+  .modal-form-input:focus + & {
+    fill: $accent-color;
+  }
 }
 
 .modal-form-message {
@@ -132,56 +141,58 @@
   resize: none;
   padding: 12px 16px;
   margin-top: 4px;
+
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.modal-form-message::placeholder {
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
-}
+  @include border-color;
 
-.modal-form-message:hover,
-.modal-form-message:focus {
-  outline: none;
-  border-color: var(--accent-color);
+  &::placeholder {
+    @include fontz(14px, 1.14, 400);
+    letter-spacing: 0.01em;
+
+    color: rgba(117, 117, 117, 0.5);
+  }
+
+  &:hover,
+  &:focus {
+    outline: none;
+
+    border-color: $accent-color;
+  }
 }
 
 .modal-form-checkbox-contract {
   font-family: Roboto;
   font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 1.7;
+  @include fontz(14px, 1.71, 400);
   display: flex;
   align-items: center;
   justify-content: center;
   margin-bottom: 30px;
+
+  &::before {
+    display: block;
+    content: '';
+    width: 16px;
+    height: 15px;
+    margin-right: 7px;
+    border-radius: 2px;
+    cursor: pointer;
+
+    border: 2px solid $primary-title-color;
+    @include border;
+  }
 }
 
 .modal-form-policy {
-  font-size: 14px;
-  line-height: 1.71;
-}
-
-.modal-form-checkbox-contract::before {
-  display: block;
-  content: '';
-  width: 16px;
-  height: 15px;
-  margin-right: 7px;
-  border-radius: 2px;
-  cursor: pointer;
-  border: 2px solid var(--primary-title-color);
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @include fontz(14px, 1.71, 400);
+  color: $accent-color;
 }
 
 .modal-form-checkbox:hover + .modal-form-checkbox-contract::before,
 .modal-form-checkbox:focus + .modal-form-checkbox-contract::before {
-  border: 2px solid var(--accent-color);
+  border: 2px solid $accent-color;
 }
 
 .checkbox-hidden {
@@ -202,23 +213,18 @@
   border: none;
 }
 
-.modal-form-policy {
-  color: var(--accent-color);
-}
-
 .modal-form-btn {
   font-family: Roboto;
   font-style: normal;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 1.88;
+  @include fontz(16px, 1.88, 700);
   padding: 10px 56px;
   align-self: center;
-  color: var(--second-title-color);
-  background-color: var(--accent-color);
-}
 
-.modal-form-btn:checked {
-  color: var(--second-title-color);
-  background-color: var(--second-accent-color);
+  color: $second-title-color;
+  background-color: $accent-color;
+
+  &:checked {
+    color: $second-title-color;
+    background-color: $second-accent-color;
+  }
 }
