--- a/scss/layout/_order.scss
+++ b/scss/layout/_order.scss
@@ -1,9 +1,12 @@
+//-----эффективные решения для вашего бизнеса-----//
+
 .section-order {
   display: flex;
   flex-wrap: wrap;
   padding-top: 200px;
   padding-bottom: 200px;
-  background-color: var(--order-color);
+
+  background-color: $order-color;
 }
 
 .order-overlay {
@@ -11,6 +14,7 @@
   height: 600px;
   margin-left: auto;
   margin-right: auto;
+
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url('../img/designers.jpg');
   background-repeat: no-repeat;
@@ -20,42 +24,43 @@
 
 .order-text {
   text-transform: uppercase;
-  font-weight: bold;
-  font-size: 44px;
-  line-height: 1.36;
-  text-align: center;
+  @include fontz(44px, 1.36, 700);
   letter-spacing: 0.06em;
+  text-align: center;
   align-items: center;
   justify-content: center;
-  color: var(--second-title-color);
   margin-bottom: 30px;
+
+  color: $second-title-color;
 }
 
 .order-button {
   display: block;
   font-family: Roboto;
   font-style: normal;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 1.88;
-  justify-content: center;
+  @include fontz(16px, 1.88, 700);
   letter-spacing: 0.06em;
+  justify-content: center;
   height: 50px;
-  color: var(--second-title-color);
-  background-color: var(--accent-color);
-  border-radius: 4px;
-  border: 0;
   cursor: pointer;
   margin: 0 auto;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  color: $second-title-color;
+  background-color: $accent-color;
+
+  border-radius: 4px;
+  border: 0;
+
+  @include background;
+
+  &:focus,
+  &:hover {
+    cursor: pointer;
+
+    background-color: $second-accent-color;
+  }
 }
 
 .order-text-button {
   padding: 10px 32px;
-}
-
-.order-button:focus,
-.order-button:hover {
-  cursor: pointer;
-  background-color: var(--second-accent-color);
 }
