--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -1,16 +1,17 @@
-.projects,
-.projects:hover {
+//-----портфолио-----//
+
+.projects {
   visibility: hidden;
   display: none;
 }
 
 .projects-title {
-  font-size: 18px;
-  line-height: 2;
+  @include fontz(18px, 2, 700);
   letter-spacing: 0.06em;
-  color: var(--primary-title-color);
   text-align: start;
   margin-bottom: 4px;
+
+  color: $primary-title-color;
 }
 
 .projects-list {
@@ -25,43 +26,46 @@
 }
 
 .projects-text {
-  line-height: 1.88;
+  @include fontz(16px, 1.88, 400);
   letter-spacing: 0.03em;
-  color: var(--primary-text-color);
   text-align: start;
+
+  color: $primary-text-color;
 }
 
 .button {
   font-family: inherit;
-  font-weight: 500;
-  line-height: 1.6;
-  text-align: center;
+  @include fontz(16px, 1.6, 500);
   letter-spacing: 0.03em;
+  text-align: center;
   border-radius: 4px;
   border: 0;
   cursor: pointer;
-  background-color: var(--background-color);
-  color: var(--primary-title-color);
   padding: 6px 22px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  background-color: $background-color;
+  color: $primary-title-color;
+
+  @include color;
+  @include background;
+  @include box-shadow;
+
+  & .current,
+  &:focus,
+  &:hover,
+  &.active-button :hover,
+  &.active-button :focus {
+    background-color: $accent-color;
+    color: $second-title-color;
+
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
 
 .acсent-button {
-  background-color: var(--accent-color);
-  color: var(--second-title-color);
-}
-
-.button .current,
-.button:focus,
-.button:hover,
-.button.active-button :hover,
-.button.active-button :focus {
-  background-color: var(--accent-color);
-  color: var(--second-title-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  background-color: $accent-color;
+  color: $second-title-color;
 }
 
 .projects-navigation {
@@ -75,38 +79,39 @@
   display: flex;
   margin-right: 30px;
   margin-bottom: 30px;
-}
 
-.projects-icons:hover .projects-description {
-  transform: translateY(0%);
+  &:hover .projects-description {
+    transform: translateY(0%);
+  }
+
+  &:nth-child(3n) {
+    margin-right: 0px;
+  }
+
+  &:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
+  }
 }
 
 .projects-element {
   text-decoration: none;
   display: block;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  @include box-shadow;
 
-.projects-element:hover,
-.projects-element:focus {
-  box-sizing: border-box;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.projects-icons:nth-child(3n) {
-  margin-right: 0px;
-}
-
-.projects-icons:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
+  &:hover,
+  &:focus {
+    box-sizing: border-box;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 
 .projects-content {
   padding: 20px 24px;
-  border-left: 1px solid var(--border-color);
-  border-right: 1px solid var(--border-color);
-  border-bottom: 1px solid var(--border-color);
+
+  border-left: 1px solid $border-color;
+  border-right: 1px solid $border-color;
+  border-bottom: 1px solid $border-color;
 }
 
 .projects-overflow {
@@ -118,13 +123,13 @@
 .projects-description {
   font-family: 'Roboto';
   font-style: normal;
-  font-weight: normal;
-  cursor: pointer;
-  font-size: 18px;
-  line-height: 1.56;
+  @include fontz(18px, 1.56, 400);
   letter-spacing: 0.03em;
-  color: var(--second-title-color);
+  cursor: pointer;
+
+  color: $second-title-color;
   background: rgba(33, 150, 243, 0.9);
+
   position: absolute;
   width: 100%;
   height: 100%;
@@ -132,8 +137,9 @@
   left: 0px;
   padding: 63px 24px;
   text-align: start;
+
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @include transform;
 }
 
 .projects-element:hover .projects-description,
