--- a/scss/layout/_team.scss
+++ b/scss/layout/_team.scss
@@ -1,5 +1,7 @@
+//-----наша команда-----//
+
 .section-team {
-  background-color: var(--background-color);
+  background-color: $background-color;
 }
 
 .team-list {
@@ -8,24 +10,25 @@
 
 .team-title {
   font-family: inherit;
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 1.17;
+  @include fontz(36px, 1.17, 700);
   letter-spacing: 0.03em;
-  color: var(--primary-title-color);
+
+  color: $primary-title-color;
+
   text-align: center;
   margin-bottom: 50px;
 }
 
-.team-item:not(:last-child) {
-  margin-right: 30px;
-}
-
 .team-item {
-  background-color: var(--second-title-color);
+  background-color: $second-title-color;
+
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
+
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .team-content {
@@ -33,19 +36,22 @@
 }
 
 .team-member {
-  font-weight: 500;
-  line-height: 1.19;
+  @include fontz(16px, 1.19, 500);
   letter-spacing: 0.03em;
   text-align: center;
-  color: var(--primary-title-color);
+
+  color: $primary-title-color;
+
   margin-bottom: 10px;
 }
 
 .team-profession {
-  line-height: 1.19;
+  @include fontz(16px, 1.19, 400);
   letter-spacing: 0.03em;
   text-align: center;
-  color: var(--primary-text-color);
+
+  color: $primary-text-color;
+
   margin-bottom: 16px;
 }
 
@@ -71,24 +77,26 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  color: #afb1b8;
-  background-color: var(--second-title-color);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.social-link:hover,
-.social-link:focus {
-  background-color: var(--accent-color);
+  color: #afb1b8;
+  background-color: $second-title-color;
+
+  @include background;
+
+  &:hover,
+  &:focus {
+    background-color: $accent-color;
+  }
 }
 
 .social-icon {
   fill: currentColor;
   width: 20px;
   height: 20px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  @include fill;
 
-.social-link:hover .social-icon,
-.social-link:focus .social-icon {
-  fill: var(--second-title-color);
+  .social-link:hover &,
+  .social-link:focus & {
+    fill: $second-title-color;
+  }
 }
