--- a/scss/utils/_vars.scss
+++ b/scss/utils/_vars.scss
@@ -1,12 +1,17 @@
-:root {
-  --primary-text-color: #757575;
-  --line-color: #ececec;
-  --border-color: #eeeeee;
-  --primary-title-color: #212121;
-  --second-title-color: #ffffff;
-  --accent-color: #2196f3;
-  --order-color: #2f303a;
-  --second-accent-color: #188ce8;
-  --footer-color: #2f303a;
-  --background-color: #f5f4fa;
-}
+$primary-text-color: #757575;
+$primary-title-color: #212121;
+
+$accent-color: #2196f3;
+
+$second-title-color: #ffffff;
+$second-accent-color: #188ce8;
+
+$line-color: #ececec;
+
+$border-color: #eeeeee;
+
+$order-color: #2f303a;
+
+$footer-color: #2f303a;
+
+$background-color: #f5f4fa;
