--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -8,6 +8,10 @@ h6 {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
 ul {
   margin: 0;
   padding: 0;
@@ -15,10 +19,6 @@ ul {
 
 .list {
   list-style: none;
-}
-
-.link {
-  text-decoration: none;
 }
 
 img {
