--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -5,30 +5,32 @@
   border: 1px solid $line-color;
 }
 
-.header-container {
+.header__wrapper {
   display: flex;
   align-items: center;
 }
 
 //-----логотип-----//
 
-.header-logo {
-  color: $accent-color;
+.logo {
   font-family: 'Raleway', sans-serif;
   @include fontz(26px, 1.19, 700);
 
+  text-decoration: none;
   letter-spacing: 0.03em;
   margin-right: 93px;
 
-  &.link {
-    display: block;
-    padding-top: 24px;
-    padding-bottom: 25px;
-    width: 145px;
-  }
+  color: $accent-color;
 }
 
-.header-logo .studio-dark {
+.logo__header {
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 25px;
+  width: 145px;
+}
+
+.logo__dark {
   color: #000;
 
   font-family: 'Raleway', sans-serif;
@@ -37,12 +39,21 @@
 
 //-----навигация-----//
 
-.header-nav {
+.nav {
   display: flex;
   align-items: center;
 }
 
-.menu-list {
+.nav__list {
+  display: flex;
+}
+
+.nav__list,
+.nav__item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.nav__link {
   display: block;
   @include fontz(14px, 1.14, 500);
   letter-spacing: 0.02em;
@@ -54,27 +65,17 @@
 
   &:hover,
   &:focus,
-  &.current,
-  .header-contacts:hover,
-  .header-contacts:focus {
+  &.current {
     color: $accent-color;
   }
 }
 
-.menu-item {
+.nav__item {
   position: relative;
   display: inline-flex;
 }
 
-.menu-link {
-  display: flex;
-}
-
-.menu-link .menu-item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.menu-item .current::after {
+.nav__link.current::after {
   content: '';
   display: block;
   width: 100%;
@@ -83,58 +84,54 @@
   justify-content: center;
   align-items: center;
   border-radius: 2px;
-  background-color: $accent-color;
   position: absolute;
+
+  background-color: $accent-color;
 }
 
 //-------контакты--------//
 
-.header-contacts {
-  display: inline-flex;
+.header__contact-list {
+  display: flex;
   margin-left: auto;
+  align-items: center;
 
   color: $primary-text-color;
+  @include color;
 
   @include fontz(14px, 1.14, 500);
   letter-spacing: 0.02em;
-  @include color;
 }
 
-.header-email,
-.header-tel {
+.header__contact-item:not(:last-child){
+  margin-right: 50px;
+}
+
+.header__contact-link {
+  display: flex;
   padding-top: 32px;
   padding-bottom: 32px;
   align-items: center;
+  cursor: pointer;
+
+  color: currentColor;
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
 }
 
-.email-icon {
-  width: 16px;
-  height: 12px;
-}
-
-.tel-icon {
-  width: 10px;
-  height: 16px;
-}
-
-.tel-icon,
-.email-icon {
-  align-items: center;
-  fill: $primary-text-color;
-}
-
-.header-contacts:focus .tel-icon,
-.header-contacts:hover .tel-icon,
-.header-contacts:hover .email-icon,
-.header-contacts:focus .email-icon {
-  fill: $accent-color;
-}
-
-.header-contacts .menu-item + .menu-item {
-  margin-left: 50px;
-}
-
-.menu-item .email-icon,
-.menu-item .tel-icon {
+.header__contact-icon {
   margin-right: 10px;
+  align-items: center;
+
+  fill: currentColor;
+
+  &:hover,
+  &:focus {
+    fill: $accent-color;
+  }
 }
+
+
