--- a/scss/layout/_modal.scss
+++ b/scss/layout/_modal.scss
@@ -1,6 +1,6 @@
 //-----модальное окно-----//
 
-.backdrop {
+.modal__backdrop {
   width: 100vw;
   height: 100vh;
   position: fixed;
@@ -29,7 +29,7 @@
   background-color: $second-title-color;
 }
 
-.modal-btn {
+.modal__btn {
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
   width: 30px;
@@ -52,14 +52,11 @@
   }
 }
 
-.modal-icon {
-  width: 18px;
-  height: 18px;
-
+.modal__icon {
   fill: currentColor;
 }
 
-.backdrop.is-hidden {
+.modal__backdrop.is-hidden {
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
@@ -70,7 +67,7 @@
   flex-direction: column;
 }
 
-.modal-form-head {
+.modal-form__head {
   font-family: 'Roboto';
   font-style: normal;
   @include fontz(20px, 1.15, 700);
@@ -80,7 +77,7 @@
   color: $primary-title-color;
 }
 
-.modal-form-item {
+.modal-form__item {
   font-family: Roboto;
   font-style: normal;
   @include fontz(12px, 1.17, 400);
@@ -90,13 +87,13 @@
   color: $primary-text-color;
 }
 
-.modal-form-wrapper {
+.modal-form__wrapper {
   display: block;
   position: relative;
   margin-top: 4px;
 }
 
-.modal-form-input {
+.modal-form__input {
   font-family: Roboto;
   font-style: normal;
   @include fontz(12px, 1.17, 400);
@@ -118,9 +115,12 @@
   }
 }
 
-.modal-form-icon {
-  width: 18px;
-  height: 18px;
+.modal-form__input:hover + .modal-form__icon,
+.modal-form__input:focus + .modal-form__icon {
+  fill: $accent-color;
+}
+
+.modal-form__icon {
   display: block;
   position: absolute;
   top: 50%;
@@ -128,14 +128,9 @@
   left: 12px;
 
   @include fill;
-
-  .modal-form-input:hover + &,
-  .modal-form-input:focus + & {
-    fill: $accent-color;
-  }
 }
 
-.modal-form-message {
+.modal-form__message {
   width: 100%;
   height: 120px;
   resize: none;
@@ -162,7 +157,7 @@
   }
 }
 
-.modal-form-checkbox-contract {
+.modal-form__checkbox--contract {
   font-family: Roboto;
   font-style: normal;
   @include fontz(14px, 1.71, 400);
@@ -185,7 +180,7 @@
   }
 }
 
-.modal-form-policy {
+.modal-form__policy {
   @include fontz(14px, 1.71, 400);
   color: $accent-color;
 }
@@ -208,17 +203,19 @@
   margin: -1px;
 }
 
-.modal-form-checkbox:checked + .modal-form-checkbox-contract::before {
+.modal-form__checkbox:checked + .modal-form__checkbox--contract::before {
   background-image: url('../img/icon-check.svg');
   border: none;
 }
 
-.modal-form-btn {
+.modal-form__btn {
   font-family: Roboto;
   font-style: normal;
   @include fontz(16px, 1.88, 700);
   padding: 10px 56px;
   align-self: center;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
   color: $second-title-color;
   background-color: $accent-color;
