--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -1,39 +1,23 @@
 //-----портфолио-----//
 
-.projects {
+.projects__title,
+.projects__title:hover {
   visibility: hidden;
   display: none;
 }
 
-.projects-title {
-  @include fontz(18px, 2, 700);
-  letter-spacing: 0.06em;
-  text-align: start;
-  margin-bottom: 4px;
-
-  color: $primary-title-color;
-}
-
-.projects-list {
+.projects__list {
   font-family: inherit;
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
 }
 
-.projects-item:not(:last-child) {
+.projects__item:not(:last-child) {
   margin-right: 8px;
 }
 
-.projects-text {
-  @include fontz(16px, 1.88, 400);
-  letter-spacing: 0.03em;
-  text-align: start;
-
-  color: $primary-text-color;
-}
-
-.button {
+.projects__button {
   font-family: inherit;
   @include fontz(16px, 1.6, 500);
   letter-spacing: 0.03em;
@@ -50,11 +34,11 @@
   @include background;
   @include box-shadow;
 
-  & .current,
+  &.current,
   &:focus,
   &:hover,
-  &.active-button :hover,
-  &.active-button :focus {
+  &.active:hover,
+  &.active:focus {
     background-color: $accent-color;
     color: $second-title-color;
 
@@ -63,37 +47,36 @@
   }
 }
 
-.acсent-button {
+.projects__button--accent {
   background-color: $accent-color;
   color: $second-title-color;
 }
 
-.projects-navigation {
+.produkt__list {
   display: flex;
   flex-wrap: wrap;
 }
 
-.projects-icons {
+.product__icons {
   width: 370px;
   height: 404px;
-  display: flex;
   margin-right: 30px;
   margin-bottom: 30px;
-
-  &:hover .projects-description {
-    transform: translateY(0%);
-  }
-
-  &:nth-child(3n) {
-    margin-right: 0px;
-  }
-
-  &:nth-last-child(-n + 3) {
-    margin-bottom: 0px;
-  }
 }
 
-.projects-element {
+.product__icons:nth-child(3n) {
+  margin-right: 0px;
+}
+
+.product__icons:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
+}
+
+.product__icons:hover + .projects-description {
+  transform: translateY(0%);
+}
+
+.product__element {
   text-decoration: none;
   display: block;
   @include box-shadow;
@@ -106,21 +89,39 @@
   }
 }
 
-.projects-content {
+.product__content {
   padding: 20px 24px;
+  height: 110px;
 
   border-left: 1px solid $border-color;
   border-right: 1px solid $border-color;
   border-bottom: 1px solid $border-color;
 }
 
-.projects-overflow {
+.product__title {
+  @include fontz(18px, 2, 700);
+  letter-spacing: 0.06em;
+  text-align: start;
+  margin-bottom: 4px;
+
+  color: $primary-title-color;
+}
+
+.product__text {
+  @include fontz(16px, 1.88, 400);
+  letter-spacing: 0.03em;
+  text-align: start;
+
+  color: $primary-text-color;
+}
+
+.product__overflow {
   position: relative;
   overflow: hidden;
   display: flex;
 }
 
-.projects-description {
+.product__description {
   font-family: 'Roboto';
   font-style: normal;
   @include fontz(18px, 1.56, 400);
@@ -142,7 +143,7 @@
   @include transform;
 }
 
-.projects-element:hover .projects-description,
-.projects-element:focus .projects-description {
+.product__element:hover .product__description,
+.product__element:focus .product__description {
   transform: translateY(0);
 }
