--- a/scss/layout/_team.scss
+++ b/scss/layout/_team.scss
@@ -1,14 +1,14 @@
 //-----наша команда-----//
 
-.section-team {
+.team {
   background-color: $background-color;
 }
 
-.team-list {
+.team__list {
   display: flex;
 }
 
-.team-title {
+.team__title {
   font-family: inherit;
   @include fontz(36px, 1.17, 700);
   letter-spacing: 0.03em;
@@ -19,7 +19,7 @@
   margin-bottom: 50px;
 }
 
-.team-item {
+.team__item {
   background-color: $second-title-color;
 
   border-radius: 0px 0px 4px 4px;
@@ -31,11 +31,11 @@
   }
 }
 
-.team-content {
+.team__content {
   padding: 30px 32px;
-}
+  }
 
-.team-member {
+.team__member {
   @include fontz(16px, 1.19, 500);
   letter-spacing: 0.03em;
   text-align: center;
@@ -45,7 +45,7 @@
   margin-bottom: 10px;
 }
 
-.team-profession {
+.team__profession {
   @include fontz(16px, 1.19, 400);
   letter-spacing: 0.03em;
   text-align: center;
@@ -55,21 +55,21 @@
   margin-bottom: 16px;
 }
 
-.social-list {
+.social__list {
   display: flex;
   justify-content: center;
 }
 
-.social-item {
+.social__item {
   width: 44px;
   height: 44px;
 }
 
-.social-item:not(:last-child) {
+.social__item:not(:last-child) {
   margin-right: 10px;
 }
 
-.social-link {
+.social__link {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -89,14 +89,14 @@
   }
 }
 
-.social-icon {
+.social__icon {
   fill: currentColor;
   width: 20px;
   height: 20px;
   @include fill;
 
-  .social-link:hover &,
-  .social-link:focus & {
+  .social__link:hover &,
+  .social__link:focus & {
     fill: $second-title-color;
   }
 }
