--- a/scss/layout/_clients.scss
+++ b/scss/layout/_clients.scss
@@ -1,5 +1,4 @@
 //-----наши клиенты-----//
-
 .clients__title {
   font-family: inherit;
   font-style: normal;
@@ -13,24 +12,45 @@
 }
 
 .clients__list {
-  display: flex;
-  box-sizing: border-box;
+  @media screen and (min-width: 480px) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 30px;
+  }
+
+  @media screen and (min-width: 768px) {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: inline-grid;
+    grid-template-columns: repeat(6, 1fr);
+    column-gap: 30px;
+  }
 }
 
-.clients__item {
-  justify-content: center;
-
-  &:not(:last-child) {
-    margin-right: 30px;
+.clients__item:not(:last-child) {
+  @media screen and (min-width: 480px) {
+    margin-bottom: 30px;
   }
 }
 
 .clients__link {
-  width: 170px;
-  height: 92px;
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 92px;
+  width: 210px;
+
+  @media screen and (min-width: 768px) {
+    width: 226px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 170px;
+  }
 
   border: 1px solid currentColor;
   border-radius: 4px;
@@ -56,6 +76,6 @@
   border-radius: 4px;
   justify-content: center;
   align-items: center;
-  
+
   @include fill;
 }
