--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,22 +1,50 @@
 //-----футер-----//
 
 .footer {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  display: flex;
-
   background-color: $footer-color;
 }
 
 .footer__container {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    text-align: start;
+  }
+}
+
+.footer__float {
+  @media screen and (min-width: 768px) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 165px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 70px;
+  }
 }
 
 .footer__wrapper {
-  width: 231px;
-  margin-right: 70px;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 60px;
+  align-items: center;
+
+  @media screen and (min-width: 1200px) {
+    width: 231px;
+    display: block;
+  }
 }
 
 .logo__footer {
@@ -25,6 +53,8 @@
   @include fontz(26px, 1.19, 700);
   text-decoration: none;
   display: flex;
+  align-items: center;
+  margin: 0 auto;
   margin-bottom: 20px;
 
   color: $accent-color;
@@ -40,14 +70,15 @@
 .adress {
   font-style: normal;
   display: block;
+  align-items: center;
 }
 
-.adress__list  {
+.adress__list {
   @include fontz(14px, 1.71, 400);
   letter-spacing: 0.03em;
 
   color: $second-title-color;
-} 
+}
 
 .adress__item:not(:last-child) {
   margin-bottom: 9px;
@@ -65,15 +96,20 @@
   &:hover {
     color: $accent-color;
   }
-}  
+}
 
 .adress__link--light {
   color: $second-title-color;
 }
 
 .footer-social {
-  width: 206px;
-  margin-right: 93px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 93px;
+  }
 }
 
 .footer-social__title {
@@ -123,23 +159,38 @@
 
 .footer-sub {
   display: flex;
+  flex-direction: column;
+
+  @media screen and (min-width: 1200px) {
+    display: inline-flex;
+    flex-direction: row;
+  }
 }
 
 .footer-sub__input {
-  width: 358px;
-  height: 50px;
-  margin-right: 12px;
-  padding: 16px;
+  padding: 15px 150px 15px 16px;
+  margin-bottom: 20px;
+  width: 450px;
 
+  background-color: transparent;
+  color: $second-title-color;
+
+  box-sizing: border-box;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
 
-  background-color: transparent;
-
-  color: $second-title-color;
-
   &::placeholder {
     color: rgba(255, 255, 255, 0.6);
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 358px;
+    margin-right: 12px;
+    padding: 16px;
   }
 }
 
@@ -148,9 +199,12 @@
   @include fontz(16px, 1.88, 700);
   letter-spacing: 0.06em;
   padding: 10px 28px 10px 29px;
+
+  position: relative;
   width: 200px;
   height: 50px;
-  display: flex;
+
+  margin: 0 auto;
   align-items: center;
   cursor: pointer;
   border-radius: 4px;
@@ -166,5 +220,6 @@
 }
 
 .footer-sub__icon {
-    fill: $second-title-color;
+  position: absolute;
+  fill: $second-title-color;
 }
