--- a/scss/layout/_order.scss
+++ b/scss/layout/_order.scss
@@ -3,15 +3,28 @@
 .order__container {
   display: block;
   flex-wrap: wrap;
-  padding-top: 200px;
-  padding-bottom: 200px; 
+  padding-top: 118px;
+  padding-bottom: 118px;
 
   background-color: $order-color;
+
+  @media screen and (min-width: 768px) {
+    display: block;
+    flex-wrap: wrap;
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: block;
+    flex-wrap: wrap;
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 
 .order__overlay {
-  max-width: 1600px;
-  height: 600px;
+  height: 400px;
   margin-left: auto;
   margin-right: auto;
 
@@ -20,16 +33,47 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+
+  @media screen and (min-width: 768px) {
+    height: 400px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  @media screen and (min-width: 1200px) {
+    height: 600px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .order__title {
   text-transform: uppercase;
-  @include fontz(44px, 1.36, 700);
+  @include fontz(26px, 1.62, 900);
   letter-spacing: 0.06em;
   align-items: center;
   text-align: center;
   justify-content: center;
   margin-bottom: 30px;
+
+  @media screen and (min-width: 768px) {
+    text-transform: uppercase;
+    @include fontz(26px, 1.62, 900);
+    letter-spacing: 0.06em;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    text-transform: uppercase;
+    @include fontz(44px, 1.36, 900);
+    letter-spacing: 0.06em;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
 
   color: $second-title-color;
 }
