--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -7,10 +7,24 @@
 }
 
 .projects__list {
-  font-family: inherit;
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .projects__item:nth-last-child(-n + 3) {
+    margin-bottom: 15px;
+  }
 }
 
 .projects__item:not(:last-child) {
@@ -18,6 +32,7 @@
 }
 
 .projects__button {
+  display: inline-block;
   font-family: inherit;
   @include fontz(16px, 1.6, 500);
   letter-spacing: 0.03em;
@@ -52,24 +67,29 @@
   color: $second-title-color;
 }
 
+//-----продукт-----//
+
 .produkt__list {
-  display: flex;
-  flex-wrap: wrap;
+  @media screen and (min-width: 768px) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.product__img {
+  width: 100vw;
+  height: 294px;
 }
 
 .product__icons {
-  width: 370px;
-  height: 404px;
-  margin-right: 30px;
-  margin-bottom: 30px;
-}
-
-.product__icons:nth-child(3n) {
-  margin-right: 0px;
-}
-
-.product__icons:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
+  @media screen and (max-width: 767px) {
+    margin-bottom: 30px;
+  }
 }
 
 .product__icons:hover + .projects-description {
@@ -77,8 +97,10 @@
 }
 
 .product__element {
-  text-decoration: none;
-  display: block;
+  flex-direction: column;
+  display: flex;
+  height: 100%;
+
   @include box-shadow;
 
   &:hover,
@@ -91,7 +113,7 @@
 
 .product__content {
   padding: 20px 24px;
-  height: 110px;
+  flex-grow: 1;
 
   border-left: 1px solid $border-color;
   border-right: 1px solid $border-color;
@@ -102,6 +124,7 @@
   @include fontz(18px, 2, 700);
   letter-spacing: 0.06em;
   text-align: start;
+  margin-top: 0;
   margin-bottom: 4px;
 
   color: $primary-title-color;
@@ -111,6 +134,7 @@
   @include fontz(16px, 1.88, 400);
   letter-spacing: 0.03em;
   text-align: start;
+  margin: 0;
 
   color: $primary-text-color;
 }
@@ -118,7 +142,7 @@
 .product__overflow {
   position: relative;
   overflow: hidden;
-  display: flex;
+  height: 100%;
 }
 
 .product__description {
