--- a/scss/layout/_team.scss
+++ b/scss/layout/_team.scss
@@ -5,7 +5,17 @@
 }
 
 .team__list {
-  display: flex;
+  text-align: center;
+
+  @media screen and (min-width: 768px) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 .team__title {
@@ -16,7 +26,11 @@
   color: $primary-title-color;
 
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
 
 .team__item {
@@ -27,13 +41,36 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
 
   &:not(:last-child) {
-    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+
+  @media screen and (min-width: 768px) {
+    &:not(:last-child) {
+      margin-bottom: 0;
+    }
   }
 }
 
 .team__content {
-  padding: 30px 32px;
+  padding: 30px 24px;
+
+  @media screen and (min-width: 1200px) {
+    padding: 30px 30px;
   }
+}
+
+.team__img {
+  @media screen and (min-width: 480px) {
+    height: 460px;
+  }
+  @media screen and (min-width: 768px) {
+    height: 374px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    height: 260px;
+  }
+}
 
 .team__member {
   @include fontz(16px, 1.19, 500);
