--- a/css/main.css
+++ b/css/main.css
@@ -176,15 +176,7 @@ img {
 
 .mobile__icon-cross,
 .mobile__icon-menu {
-  -webkit-transition-property: fill;
-  -o-transition-property: fill;
-  transition-property: fill;
-  -webkit-transition-duration: 250ms;
-       -o-transition-duration: 250ms;
-          transition-duration: 250ms;
-  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-       -o-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  fill: #212121;
 }
 
 .mobile__button:hover .mobile__icon-cross,
@@ -285,20 +277,6 @@ img {
   }
 }
 
-.nav__list {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-@media screen and (min-width: 768px) {
-  .nav__list,
-  .nav__item:not(:last-child) {
-    margin-right: 50px;
-  }
-}
-
 .nav__link {
   display: inline-block;
   margin-bottom: 32px;
@@ -334,12 +312,10 @@ img {
   }
 }
 
-.nav__item {
-  position: relative;
-  display: -webkit-inline-box;
-  display: -webkit-inline-flex;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
+@media screen and (min-width: 768px) {
+  .nav__link:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 
 .nav__link.current {
@@ -410,8 +386,12 @@ img {
 @media screen and (min-width: 1200px) {
   .header__contact-item:not(:last-child) {
     margin-bottom: 0;
-    margin-right: 50px;
+    margin-right: 30px;
   }
+}
+
+.header__contact-item {
+  color: #757575;
 }
 
 .header__contact-link {
@@ -459,13 +439,24 @@ img {
   }
 }
 
+@media screen and (max-width: 767px) {
+  .mobile__phone-link {
+    margin-bottom: 32px;
+    font-size: 34px;
+    line-height: 1.17;
+    font-weight: 500;
+    letter-spacing: 00.02em;
+    color: #2196f3;
+  }
+}
+
 .header__contact-icon {
   margin-right: 10px;
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  fill: currentColor;
+  fill: #757575;
 }
 
 @media screen and (max-width: 767px) {
@@ -476,6 +467,12 @@ img {
 
 .header__contact-icon:hover, .header__contact-icon:focus {
   fill: #2196f3;
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-socials {
+    display: none;
+  }
 }
 
 .mobile-socials__link {
@@ -497,45 +494,37 @@ img {
 }
 
 .order__container {
-  display: block;
-  -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
+  margin-right: auto;
+  margin-left: auto;
   padding-top: 118px;
   padding-bottom: 118px;
+  height: 400px;
   background-color: #2f303a;
 }
 
 @media screen and (min-width: 768px) {
   .order__container {
-    display: block;
-    -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
     padding-top: 118px;
     padding-bottom: 118px;
+    background-color: #2f303a;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .order__container {
-    display: block;
-    -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
     padding-top: 200px;
     padding-bottom: 200px;
+    max-width: 1600px;
+    height: 600px;
+    background-color: #2f303a;
   }
 }
 
 .order__overlay {
-  height: 400px;
-  margin-left: auto;
-  margin-right: auto;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../img/designers.jpg");
-  background-image: -webkit-linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/designers.jpg");
-  background-image: -o-linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/designers.jpg");
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/designers.jpg");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../img/designers-m@1x.jpg");
+  background-image: -webkit-linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/designers-m@1x.jpg");
+  background-image: -o-linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/designers-m@1x.jpg");
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/designers-m@1x.jpg");
   background-repeat: no-repeat;
   background-position: center;
   -webkit-background-size: cover;
@@ -544,17 +533,27 @@ img {
 
 @media screen and (min-width: 768px) {
   .order__overlay {
-    height: 400px;
-    margin-left: auto;
-    margin-right: auto;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../img/designers-t@1x.jpg");
+    background-image: -webkit-linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/designers-t@1x.jpg");
+    background-image: -o-linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/designers-t@1x.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/designers-t@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    -webkit-background-size: cover;
+            background-size: cover;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .order__overlay {
-    height: 600px;
-    margin-left: auto;
-    margin-right: auto;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../img/designers.jpg");
+    background-image: -webkit-linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/designers.jpg");
+    background-image: -o-linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/designers.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/designers.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    -webkit-background-size: cover;
+            background-size: cover;
   }
 }
 
