--- a/scss/layout/_order.scss
+++ b/scss/layout/_order.scss
@@ -1,48 +1,51 @@
 //-----эффективные решения для вашего бизнеса-----//
 
 .order__container {
-  display: block;
-  flex-wrap: wrap;
+  margin-right: auto;
+  margin-left: auto;
   padding-top: 118px;
   padding-bottom: 118px;
+  height: 400px;
 
   background-color: $order-color;
 
   @media screen and (min-width: 768px) {
-    display: block;
-    flex-wrap: wrap;
     padding-top: 118px;
     padding-bottom: 118px;
+
+    background-color: $order-color;
   }
 
   @media screen and (min-width: 1200px) {
-    display: block;
-    flex-wrap: wrap;
     padding-top: 200px;
     padding-bottom: 200px;
+    max-width: 1600px;
+    height: 600px;
+
+    background-color: $order-color;
   }
 }
 
 .order__overlay {
-  height: 400px;
-  margin-left: auto;
-  margin-right: auto;
-
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url('../img/designers.jpg');
+    url('../img/designers-m@1x.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 
   @media screen and (min-width: 768px) {
-    height: 400px;
-    margin-left: auto;
-    margin-right: auto;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url('../img/designers-t@1x.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
   }
   @media screen and (min-width: 1200px) {
-    height: 600px;
-    margin-left: auto;
-    margin-right: auto;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url('../img/designers.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
   }
 }
 
