--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -42,7 +42,7 @@
   align-items: center;
 
   @media screen and (min-width: 1200px) {
-    width: 231px;
+    margin-bottom: 0;
     display: block;
   }
 }
