--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,7 @@ img {
 
 .header {
   position: relative;
-  border: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
 }
 
 .header__wrapper {
@@ -96,13 +96,14 @@ img {
 @media screen and (max-width: 767px) {
   .mobile__container {
     display: none;
+    z-index: 5;
     position: fixed;
     padding: 48px 40px;
     top: 0;
     left: 0;
+    bottom: 0;
     width: 100vw;
     height: 100vh;
-    z-index: 10;
     background-color: #ffffff;
   }
   .mobile__container.is-open {
@@ -144,8 +145,8 @@ img {
   margin-left: auto;
   background-color: transparent;
   border: none;
-  width: 40px;
-  height: 40px;
+  top: 22px;
+  right: 23px;
   cursor: pointer;
 }
 
@@ -157,14 +158,12 @@ img {
 
 .mobile__button-close {
   position: absolute;
-  top: 10px;
-  right: 15px;
+  top: 21px;
+  right: 21px;
   padding: 0;
   margin-left: auto;
   background-color: transparent;
   border: none;
-  width: 40px;
-  height: 40px;
   cursor: pointer;
 }
 
@@ -328,16 +327,18 @@ img {
   }
 }
 
-.nav__link.current::after {
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 4px;
-  bottom: -1px;
-  left: 0;
-  -webkit-border-radius: 2px;
-          border-radius: 2px;
-  background-color: #2196f3;
+@media screen and (min-width: 768px) {
+  .nav__link.current::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    bottom: -1px;
+    left: 0;
+    -webkit-border-radius: 2px;
+            border-radius: 2px;
+    background-color: #2196f3;
+  }
 }
 
 .header__contact-list {
@@ -672,6 +673,7 @@ img {
     -webkit-column-gap: 30px;
        -moz-column-gap: 30px;
             column-gap: 30px;
+    row-gap: 30px;
   }
 }
 
@@ -692,12 +694,14 @@ img {
 
 @media screen and (min-width: 768px) {
   .features__item:not(:last-child) {
-    margin-bottom: 30px;
+    margin-bottom: 0;
+    row-gap: 0;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .features__item:not(:last-child) {
+    margin-bottom: 0;
     margin-right: 0;
   }
 }
@@ -756,6 +760,7 @@ img {
   font-size: 14px;
   line-height: 1.71;
   font-weight: 400;
+  letter-spacing: 00.03em;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -853,8 +858,8 @@ img {
 
 .team__title {
   font-family: inherit;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
   font-weight: 700;
   letter-spacing: 0.03em;
   color: #212121;
@@ -864,6 +869,9 @@ img {
 
 @media screen and (min-width: 1200px) {
   .team__title {
+    font-size: 36px;
+    line-height: 1.17;
+    font-weight: 700;
     margin-bottom: 50px;
   }
 }
@@ -1012,13 +1020,22 @@ img {
 .clients__title {
   font-family: inherit;
   font-style: normal;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
   font-weight: 700;
   letter-spacing: 0.03em;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   text-align: center;
   color: #212121;
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__title {
+    font-size: 36px;
+    line-height: 1.17;
+    font-weight: 700;
+    margin-bottom: 50px;
+  }
 }
 
 @media screen and (min-width: 480px) {
@@ -1030,6 +1047,7 @@ img {
     -webkit-column-gap: 30px;
        -moz-column-gap: 30px;
             column-gap: 30px;
+    row-gap: 30px;
   }
 }
 
@@ -1042,6 +1060,7 @@ img {
     -webkit-column-gap: 30px;
        -moz-column-gap: 30px;
             column-gap: 30px;
+    row-gap: 30px;
   }
 }
 
@@ -1054,12 +1073,6 @@ img {
     -webkit-column-gap: 30px;
        -moz-column-gap: 30px;
             column-gap: 30px;
-  }
-}
-
-@media screen and (min-width: 480px) {
-  .clients__item:not(:last-child) {
-    margin-bottom: 30px;
   }
 }
 
@@ -1218,7 +1231,7 @@ img {
 
 @media screen and (min-width: 1200px) {
   .footer__wrapper {
-    width: 231px;
+    margin-bottom: 0;
     display: block;
   }
 }
@@ -1498,11 +1511,22 @@ img {
   -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
+  -webkit-box-pack: start;
+  -webkit-justify-content: start;
+      -ms-flex-pack: start;
+          justify-content: start;
   margin-bottom: 40px;
 }
 
 @media screen and (min-width: 768px) {
   .projects__list {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
     -webkit-box-pack: center;
     -webkit-justify-content: center;
         -ms-flex-pack: center;
@@ -1513,12 +1537,23 @@ img {
 
 @media screen and (min-width: 1200px) {
   .projects__list {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin-bottom: 50px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .projects__item:nth-last-child(-n + 3) {
+  .projects__item:nth-child(-n + 3) {
     margin-bottom: 15px;
   }
 }
@@ -1600,7 +1635,7 @@ img {
 }
 
 @media screen and (max-width: 767px) {
-  .product__icons {
+  .product__icons:not(:last-child) {
     margin-bottom: 30px;
   }
 }
@@ -1677,7 +1712,6 @@ img {
 .product__overflow {
   position: relative;
   overflow: hidden;
-  height: 100%;
 }
 
 .product__description {
@@ -1700,6 +1734,7 @@ img {
   -webkit-transform: translateY(100%);
       -ms-transform: translateY(100%);
           transform: translateY(100%);
+  opacity: 0;
   -webkit-transition-property: -webkit-transform;
   transition-property: -webkit-transform;
   -o-transition-property: transform;
@@ -1715,6 +1750,7 @@ img {
 
 .product__element:hover .product__description,
 .product__element:focus .product__description {
+  opacity: 1;
   -webkit-transform: translateY(0);
       -ms-transform: translateY(0);
           transform: translateY(0);
