--- a/scss/layout/_features.scss
+++ b/scss/layout/_features.scss
@@ -9,6 +9,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 30px;
+    row-gap: 30px;
   }
 
   @media screen and(min-width: 1200px) {
@@ -23,10 +24,12 @@
   }
 
   @media screen and(min-width: 768px) {
-    margin-bottom: 30px;
+    margin-bottom: 0;
+    row-gap: 0;
   }
 
   @media screen and(min-width: 1200px) {
+    margin-bottom: 0;
     margin-right: 0;
   }
 }
@@ -71,6 +74,7 @@
   color: $primary-text-color;
 
   @include fontz(14px, 1.71, 400);
+  letter-spacing: 00.03em;
   margin-top: 0;
   margin-bottom: 0;
 }
