--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,7 +1,7 @@
 .header {
   position: relative;
 
-  border: 1px solid $line-color;
+  border-bottom: 1px solid $line-color;
 }
 
 .header__wrapper {
@@ -13,13 +13,14 @@
   @media screen and (max-width: 767px) {
     display: none;
 
+    z-index: 5;
     position: fixed;
     padding: 48px 40px;
     top: 0;
     left: 0;
+    bottom: 0;
     width: 100vw;
     height: 100vh;
-    z-index: 10;
 
     background-color: $second-title-color;
 
@@ -29,6 +30,7 @@
       justify-content: space-between;
     }
   }
+
   @media screen and (min-width: 768px) {
     display: flex;
     align-items: center;
@@ -43,8 +45,8 @@
   margin-left: auto;
   background-color: transparent;
   border: none;
-  width: 40px;
-  height: 40px;
+  top: 22px;
+  right: 23px;
 
   cursor: pointer;
 
@@ -55,15 +57,13 @@
 
 .mobile__button-close {
   position: absolute;
-  top: 10px;
-  right: 15px;
+  top: 21px;
+  right: 21px;
   padding: 0;
   margin-left: auto;
 
   background-color: transparent;
   border: none;
-  width: 40px;
-  height: 40px;
 
   cursor: pointer;
 
@@ -182,17 +182,19 @@
 }
 
 .nav__link.current::after {
-  content: '';
-  position: absolute;
+  @media screen and (min-width: 768px) {
+    content: '';
+    position: absolute;
 
-  width: 100%;
-  height: 4px;
-  bottom: -1px;
-  left: 0;
+    width: 100%;
+    height: 4px;
+    bottom: -1px;
+    left: 0;
 
-  border-radius: 2px;
+    border-radius: 2px;
 
-  background-color: $accent-color;
+    background-color: $accent-color;
+  }
 }
 
 //-------контакты--------//
